--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_cubico.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_cubico.xml
@@ -161,7 +161,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Simple Spline"
+        android:text="Cubic Spline"
         android:textColor="@color/ap_black"
         android:textSize="25dp"
         android:textStyle="italic"
@@ -169,5 +169,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/ayudaIterpolation"
+        android:layout_width="61dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="ShowPopupCubico"
+        android:text="Help"
+        app:layout_constraintBottom_toTopOf="@+id/ingresoPunto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.71"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="Help" />
+
 
 </android.support.constraint.ConstraintLayout>
