--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_newton_dividido2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_newton_dividido2.xml
@@ -163,4 +163,21 @@
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/ingresoPunto" />
 
+    <Button
+        android:id="@+id/ayudaIterpolation"
+        android:layout_width="61dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="ShowPopupNewton"
+        android:text="Help"
+        app:layout_constraintBottom_toTopOf="@+id/ingresoPunto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.71"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="Help" />
+
 </android.support.constraint.ConstraintLayout>
