--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
@@ -5,16 +5,46 @@
     android:layout_height="match_parent"
     android:background="@color/ap_white"
     xmlns:tools="http://schemas.android.com/tools">
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
+
+    <TextView
+        android:id="@+id/A"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="A"
+        android:layout_marginTop="100dp"
+        android:textSize="30dp" />
+    <TextView
+        android:id="@+id/X"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="X"
+        android:layout_marginTop="100dp"
+        android:layout_gravity="right"
+        android:textSize="30dp"
+        />
+    <TextView
+        android:id="@+id/B"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="B"
+        android:layout_marginTop="100dp"
+        android:layout_gravity="top|center"
+        android:textSize="30dp"
+        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:scrollbars="vertical">
-        <HorizontalScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+
+        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/ap_white"
             android:scrollbars="vertical"
             tools:context="com.androidplot.demos.matrix2">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,8 +86,7 @@
                                 android:id="@+id/MatrixAC"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_column="2"
-                                android:background="#8DD2C6"></TableLayout>
+                                android:layout_column="2"></TableLayout>
                         </HorizontalScrollView>
 
                         <TextView
@@ -91,10 +120,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginTop="31dp"
                     android:layout_marginEnd="50dp"
                     android:layout_marginStart="80dp"
-                    android:background="#8DD2C6"></TableLayout>
+                    android:layout_marginTop="31dp"></TableLayout>
 
                 <TextView
                     android:id="@+id/matrixAEqual"
@@ -108,25 +136,30 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/ap_black"
                     android:textSize="25dp"
-                    android:textStyle="italic"/>
+                    android:textStyle="italic" />
 
                 <TableLayout
                     android:id="@+id/VectorX"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="50dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginTop="31dp"
                     android:background="@color/ap_gray"></TableLayout>
             </LinearLayout>
         </HorizontalScrollView>
     </ScrollView>
 
-    <android.support.constraint.ConstraintLayout
+    <HorizontalScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom">
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="237dp"
-        android:layout_gravity="bottom">
+        android:layout_height="102dp"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button3"
@@ -219,12 +252,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.243" />
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+</HorizontalScrollView>
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="119dp"
-        android:layout_gravity="center">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom">
 
         <Button
             android:id="@+id/matrix_LU"
@@ -249,5 +284,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.774" />
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 </FrameLayout>
