--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
@@ -166,7 +166,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="GaussSimple"
-            android:text="GaussSimple"
+            android:text="GAUSS SIMPLE"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.52"
@@ -178,7 +178,7 @@
             android:id="@+id/Iterativos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ITERATIVOS"
+            android:text="ITERATIVS"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -191,7 +191,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="PivoteoParcial"
-            android:text="PivoteoParcial"
+            android:text="PARCIAL PIVOTING"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.46"
@@ -204,7 +204,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="PivoteoTotal"
-            android:text="PivoteoTotal"
+            android:text="TOTAL PIVOTING"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -216,7 +216,7 @@
             android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="Crout"
+            android:onClick="CROUT"
             android:text="CROUT"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -232,7 +232,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="280dp"
             android:onClick="Doolittle"
-            android:text="Doolittle"
+            android:text="DOOLITTLE"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
