--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
@@ -178,7 +178,7 @@
             android:id="@+id/Iterativos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ITERATIVS"
+            android:text="ITERATIVE"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
