--- a/elemental/Elemental/demoapp/src/main/res/layout/ayuda_interpolacion.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/ayuda_interpolacion.xml
@@ -6,7 +6,7 @@
     android:layout_width="350dp"
     android:layout_height="450dp"
     android:layout_gravity="center"
-    android:background="@color/ap_white"
+    android:background="@color/legacy_primary"
     android:padding="10dp">
 
     <TextView
@@ -131,6 +131,8 @@ The first part you should put de number of points that you want to put in the me
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:foregroundGravity="center"
+                    android:autoLink="web"
+                    android:linksClickable="true"
                     android:text="If you have doubts about theoretical concepts or need examples of the methods we invite you to go to our page: https://sites.google.com/site/numericalanalysisinpython/"
                     android:textColor="@color/ap_black"
                     android:textStyle="bold" />
