--- a/elemental/Elemental/demoapp/src/main/res/layout/graficadora_ayuda.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/graficadora_ayuda.xml
@@ -6,7 +6,7 @@
     android:layout_width="350dp"
     android:layout_height="450dp"
     android:layout_gravity="center"
-    android:background="@color/ap_white"
+    android:background="@color/legacy_primary"
     android:padding="10dp">
 
     <TextView
@@ -130,6 +130,8 @@ We also show you a complete function:"
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:autoLink="web"
+                    android:linksClickable="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:foregroundGravity="center"
