--- a/elemental/Elemental/demoapp/src/main/res/layout/raices_multiples_ayuda.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/raices_multiples_ayuda.xml
@@ -5,7 +5,7 @@
     android:layout_width="350dp"
     android:layout_height="450dp"
     android:layout_gravity="center"
-    android:background="@color/ap_white"
+    android:background="@color/legacy_primary"
     android:padding="10dp">
 
     <TextView
@@ -147,6 +147,8 @@ In some methods you have the possibility to choose between relative error and ab
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:foregroundGravity="center"
+                    android:autoLink="web"
+                    android:linksClickable="true"
                     android:text="Finally if you have doubts about theoretical concepts or need examples of the methods we invite you to go to our page: https://sites.google.com/site/numericalanalysisinpython/"
                     android:textStyle="bold"
                     android:textColor="@color/ap_black"/>
