--- a/elemental/Elemental/demoapp/src/main/res/layout/main.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/main.xml
@@ -27,7 +27,7 @@
 
     <Button
         android:id="@+id/metodo1"
-        android:layout_width="195dp"
+        android:layout_width="wrap_content"
         android:layout_height="66dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -36,16 +36,16 @@
         android:text="Single variable equations"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.022" />
 
     <Button
         android:id="@+id/fxPlotExample"
         style="@style/FullScreenGraph.Minimalist"
-        android:layout_width="187dp"
-        android:layout_height="49dp"
+        android:layout_width="222dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="143dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -53,14 +53,13 @@
         android:text="Graph a function"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
         android:id="@+id/Interpolacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="226dp"
+        android:layout_height="51dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -69,20 +68,21 @@
         app:layout_constraintBottom_toTopOf="@+id/fxPlotExample"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintVertical_bias="0.511" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="221dp"
+        android:layout_height="55dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
-        android:text="Linear equation"
+        android:text="       Linear equation       "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/metodo1"
         app:layout_constraintVertical_bias="0.0" />
