--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_interpolacion_metodos.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_interpolacion_metodos.xml
@@ -9,89 +9,70 @@
 
     <Button
         android:id="@+id/NewtonDivision"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="168dp"
+        android:layout_width="159dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginStart="26dp"
         android:text="Newton"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/Lagrange"
-        app:layout_constraintHorizontal_bias="0.406"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.067" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/Lagrange"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_width="159dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="29dp"
         android:text="Lagrange"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBaseline_toBaselineOf="@+id/NewtonDivision"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.887"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.636" />
+        app:layout_constraintStart_toEndOf="@+id/NewtonDivision" />
 
     <Button
         android:id="@+id/Simple"
-        android:layout_width="91dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="32dp"
         android:text="Simple"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Cuadratico"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/Cuadratico"
-        android:layout_width="121dp"
-        android:layout_height="44dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginTop="20dp"
-        android:text="Cuadratic"
+        app:layout_constraintBottom_toTopOf="@+id/Cuadratico"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
+        android:id="@+id/Cuadratico"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="27dp"
+        android:text="Cuadratic"
+        app:layout_constraintBottom_toTopOf="@+id/Cubico"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Simple" />
+
+    <Button
         android:id="@+id/Cubico"
-        android:layout_width="107dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="75dp"
         android:text="Cubic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Simple"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintTop_toBottomOf="@+id/Cuadratico" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginBottom="24dp"
         android:text="Splines"
         android:textColor="@color/ap_black"
         android:textSize="25dp"
         android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/Simple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NewtonDivision" />
@@ -100,9 +81,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="130dp"
         android:layout_marginTop="16dp"
         android:text="Interpolation"
         android:textColor="@color/ap_black"
@@ -111,7 +90,6 @@
         app:layout_constraintBottom_toTopOf="@+id/NewtonDivision"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
